# IP

./: .gitignore  CMakeLists.txt  main.cpp
common/headers/: DataRetriever.h  GrayImage.fwd.h  GrayImage.h  ImageToProcess.fwd.h  ImageToProcess.h  ImagesHandler.h  ItpPrinter.fwd.h  ItpPrinter.h  ProjectConstants.h  ProjectHelper.h  RgbImage.h
common/src/: DataRetriever.cpp  GrayImage.cpp  ImageToProcess.cpp  ImagesHandler.cpp  ItpPrinter.cpp  ProjectHelper.cpp  RgbImage.cpp
convolution/headers/: BorderPolicy.h  Convolution.h  ConvolutionBuilder.h  ConvolutionTool.h  FavOperations.h  Kernel.h  KernelsHandler.h  MirrorPolicy.h  OutOfBoundPolicy.h  SequentialConvolutionTool.h
convolution/src/: BorderPolicy.cpp  Convolution.cpp  ConvolutionBuilder.cpp  ConvolutionTool.cpp  FavOperations.cpp  Kernel.cpp  KernelsHandler.cpp  MirrorPolicy.cpp  OutOfBoundPolicy.cpp  SequentialConvolutionTool.cpp
demos/headers/: Lab.h  Lab1.h  Lab2.h  Lab3.h  Lab4.h  Lab5.h
demos/src/: Lab.cpp  Lab1.cpp  Lab2.cpp  Lab3.cpp  Lab4.cpp  Lab5.cpp
descriptors/headers/: Descriptor.h  DescritorBuilder.h
descriptors/src/: Descriptor.cpp  DescritorBuilder.cpp
distortions/headers/: Contrast.h  Distortion.h  Rotate.h  Scale.h  Shift.h
distortions/src/: Contrast.cpp  Distortion.cpp  Rotate.cpp  Scale.cpp  Shift.cpp
pois/headers/: Harris.h  Moravec.h  POI.h  POIsFinder.h
pois/src/: Harris.cpp  Moravec.cpp  POI.cpp  POIsFinder.cpp
pyramids/headers/: Octave.h  Pyramid.h
pyramids/src/: Octave.cpp  Pyramid.cpp
